--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ menu:
   - title:             Research
     url:               /example/
   - title:             Publications
-    url:               /example/
+    url:               /Publications/
   - title:             CV
     url:               /docs/
   - title:             About
