--- a/_config.yml
+++ b/_config.yml
@@ -49,10 +49,12 @@ author:
 
 # Add links to the sidebar.
 menu:
-  - title:             Example
+  - title:             Research
     url:               /example/
-  - title:             Documentation
-    url:               /docs/
+  - title:             Publications
+    url:               /publications/
+  - title:             CV
+    url:               /about/
   - title:             About
     url:               /about/
 
@@ -349,8 +351,8 @@ plugins:
 #   yandex:              <verification-id>
 
 # Used for twitter cards
-# twitter:
-#   username:            <username>
+ twitter:
+   username:            pHred_cheng
 
 # Used for facebook open graph
 # facebook:
@@ -359,11 +361,11 @@ plugins:
 #   admins:              <id>
 
 # Used on index and about sites
-# social:
-#   name:                <firstname> <lastname>
-#   links:
-#     - https://twitter.com/<username>
-#     - https://github.com/<username>
+ social:
+   name:                <firstname> <lastname>
+   links:
+     - https://twitter.com/pHred_cheng
+     - https://github.com/landscape-ecohydrology
 
 
 # Plugin Configs
