--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ menu:
   - title:             Research
     url:               /example/
   - title:             Publications
-    url:               /Publications/Publications/
+    url:               /Publications/
   - title:             CV
     url:               /docs/
   - title:             About
