--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description:           >
   Hydejack is a boutique Jekyll theme for hackers, nerds, and academics,
   with a focus on personal sites that are meant to impress.
 # A shorter description for the sidebar.
-tagline:               Frederick Cheng at University of Waterloo
+tagline:               Frederick Cheng  University of Waterloo
 
 # A list of keywords for your blog
 keywords:              [ecohydrology, biogeochemistry, watershed hydrology]
