--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -27,11 +27,11 @@ author1:
   # Rearrange to change the order in which they appear
   social:
     twitter:         pHred_cheng
-    github:          https://landscape-ecohydrology.github.io
+    github:          https://github.com/landscape-ecohydrology
     # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
-    # google:          <number>
+    google:          https://scholar.google.ca/citations?user=2fIn9-oAAAAJ&hl
     # vk:              <username>
     # youtube:         <string_string_string>
     # vimeo:           <username>
