--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ author:
   name:                <firstname> <lastname>
   email:               <mail@domain.tld>
   # # Used by `jekyll-seo-tag`:
-  twitter:             <pHred_cheng>
+  twitter:             <username>
 
 # Add links to the sidebar.
 menu:
