--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ menu:
   - title:             CV
     url:               /docs/
   - title:             About
-    url:               /about/
+    url:               /About/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
