--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ author:
 # Add links to the sidebar.
 menu:
   - title:             Research
-    url:               /example/
+    url:               /research/
   - title:             Publications
     url:               /publications/
   - title:             CV
