--- a/_config.yml
+++ b/_config.yml
@@ -52,8 +52,8 @@ menu:
     url:               /research/
   - title:             Publications
     url:               /publications/
-  - title:             CV
-    url:               /docs/
+  - title:             Teaching
+    url:               /teaching/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
