--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,8 +2,8 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name:                Frederick Cheng
+  email:               fycheng@uwaterloo.ca
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
@@ -28,7 +28,7 @@ author1:
   social:
     twitter:         pHred_cheng
     github:          https://github.com/landscape-ecohydrology
-    # email:           <mail@domain.tld>
+    email:           fycheng@uwaterloo.ca
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     google:          https://scholar.google.ca/citations?user=2fIn9-oAAAAJ&hl
