--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title:                 Landscape Ecohydrology
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Research by Frederick Cheng at the University of Waterloo. Ecohydrology, wetlands, watershed biogeochemistry. 
+  Research by Frederick Cheng at the University of Waterloo on ecohydrology, wetlands, watershed biogeochemistry. 
 
 # A shorter description for the sidebar.
 tagline:               Frederick Cheng  <br /> University of Waterloo
