--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,8 @@ menu:
     url:               /publications/
   - title:             Teaching
     url:               /teaching/
+  - title:             Opportunities
+    url:               /opportunities/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
@@ -66,7 +68,7 @@ legal:
 #    url:               /CHANGELOG/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2021. All rights reserved.
+copyright:             © 2023. All rights reserved.
 
 # Format of the permalinks
 permalink:             /:categories/:year-:month-:day-:title/
