--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ title:                 Landscape Ecohydrology
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Research by Frederick Cheng at the University of Waterloo on ecohydrology, wetlands, watershed biogeochemistry. 
+  Research by Frederick Cheng at the University of Virginia on ecohydrology, wetlands, watershed biogeochemistry. 
 
 # A shorter description for the sidebar.
-tagline:               Frederick Cheng  <br /> Colorado State University
+tagline:               Frederick Cheng  <br /> University of Virginia
 
 # A list of keywords for your blog
 keywords:              ecohydrology, biogeochemistry, watershed hydrology, Frederick Cheng
@@ -42,7 +42,7 @@ logo:                  /assets/img/logo.png
 author:
   # Used by `jekyll-feed`:
   name:                Frederick Cheng
-  email:               fycheng@colostate.edu
+  email:               frederick.cheng@virginia.edu
   # # Used by `jekyll-seo-tag`:
   twitter:             pHred_cheng
 
