--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,8 @@ menu:
     url:               /teaching/
   - title:             Opportunities
     url:               /opportunities/
+  - title:             Our Team
+    url:               /team/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
