--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ legal:
 #    url:               /CHANGELOG/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © {{ site.time | date: "%Y" }}. All rights reserved.
+copyright:             © /:year/. All rights reserved.
 
 # Format of the permalinks
 permalink:             /:categories/:year-:month-:day-:title/
